--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.springframework</groupId>
     <artifactId>gs-rest-service</artifactId>
-    <version>0.2.0</version>
+    <version>0.3.0</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -28,6 +28,9 @@
             <artifactId>json-path</artifactId>
             <scope>test</scope>
         </dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql_connector-java</artifactId>
+        <version>8.0.19</version>
     </dependencies>
 
     <properties>
