--- a/pom.xml
+++ b/pom.xml
@@ -28,9 +28,11 @@
             <artifactId>json-path</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
         <groupId>mysql</groupId>
         <artifactId>mysql_connector-java</artifactId>
         <version>8.0.19</version>
+        </dependency>
     </dependencies>
 
     <properties>
