--- a/pom.xml
+++ b/pom.xml
@@ -28,10 +28,10 @@
             <artifactId>json-path</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
+       <dependency>
         <groupId>mysql</groupId>
-        <artifactId>mysql_connector-java</artifactId>
-        <version>8.0.19</version>
+        <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.19</version>
         </dependency>
     </dependencies>
 
